@@ -607,8 +607,23 @@ void CParticleSystemSceneNode::deserializeAttributes(io::IAttributes* in, io::SA
 	case EPET_POINT:
 		Emitter = createPointEmitter();
 		break;
+	case EPET_ANIMATED_MESH:
+		Emitter = createAnimatedMeshSceneNodeEmitter(NULL); // we can't set the node - the user will have to do this
+		break;
 	case EPET_BOX:
 		Emitter = createBoxEmitter();
+		break;
+	case EPET_CYLINDER:
+		Emitter = createCylinderEmitter(core::vector3df(0,0,0), 10.f, core::vector3df(0,1,0), 10.f);	// (values here don't matter)
+		break;
+	case EPET_MESH:
+		Emitter = createMeshEmitter(NULL);	// we can't set the mesh - the user will have to do this
+		break;
+	case EPET_RING:
+		Emitter = createRingEmitter(core::vector3df(0,0,0), 10.f, 10.f);	// (values here don't matter)
+		break;
+	case EPET_SPHERE:
+		Emitter = createSphereEmitter(core::vector3df(0,0,0), 10.f);	// (values here don't matter)
 		break;
 	default:
 		break;
@@ -645,11 +660,17 @@ void CParticleSystemSceneNode::deserializeAttributes(io::IAttributes* in, io::SA
 
 		switch(atype)
 		{
+		case EPAT_ATTRACT:
+			aff = createAttractionAffector(core::vector3df(0,0,0));
+			break;
 		case EPAT_FADE_OUT:
 			aff = createFadeOutParticleAffector();
 			break;
 		case EPAT_GRAVITY:
 			aff = createGravityAffector();
+			break;
+		case EPAT_ROTATE:
+			aff = createRotationAffector();
 			break;
 		case EPAT_SCALE:
 			aff = createScaleParticleAffector();
